<resources>
    <string name="app_name">Admin</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account:</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an Account:</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="add_new_product">Add New Product</string>
    <string name="orders">Orders</string>
    <string name="dispatch">Dispatch</string>
    <string name="add_edit_product">Add/Edit Product</string>
    <string name="send">Send</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="delivered">Delivered</string>
    <string name="login_request">Login Request</string>
    <string name="phone_no">Phone No</string>
    <string name="save_changes">Save Changes</string>
    <string name="quantity">Quantity</string>
    <string name="title">Title</string>
    <string name="expand">Expand</string>
    <string name="delete">Delete</string>
    <string name="recovery_info">If email exist on our database we will send a recovery email</string>
</resources>